# holonomy

./: .gitignore  README.md  flake.nix  graph.py  main.py  pyproject.toml  shell.nix  tetrahedron.py
.github/workflows/: check.yaml
.zed/: debug.json  tasks.json
holonomy/: __init__.py  curves.py  graph.py
holonomy/examples/: cube.py  dodecahedron.py  octahedron.py  sin-3-net.py  sin_3_net.py  square_antiprism.py  tetrahedron.py  truncated_tetrahedron.py
holonomy/generate/: __init__.py  model3d.py
holonomy/visualise/: graph.py
nix/: bezier.nix  overlay.nix  pyright.nix  shell.nix  treefmt.nix
npins/: sources.json
