[project]
name = "holonomy"
version = "0.1.0"
description = "Generating and solving holonomy puzzles"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "bezier>=2024.6.20",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "numpy~=2.0",
    "plotly>=6.0.1",
]

[dependency-groups]
dev = []
lint = ["ruff", "pyright"]

[tool.uv]
default-groups = ["dev", "lint"]

[tool.ruff]
preview = true
line-length = 120

[tool.ruff.lint]
extend-select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["E501"]

[project.scripts]
holonomy = "holonomy:main"
visualise = "holonomy.visualise.graph:main"

[build-system]
requires = ["flit-core>=3.4,<4"]
build-backend = "flit_core.buildapi"
